--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.haojie_huang_myruns1"
+        applicationId "com.example.haojie_huang_myruns2"
         minSdk 26
         targetSdk 32
         versionCode 1
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
