--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.haojie_huang_myruns1">
+    package="com.example.haojie_huang_myruns2">
 
     <application
         android:allowBackup="false"
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Haojie_Huang_MyRuns1"
+        android:theme="@style/Theme.Haojie_Huang_MyRuns2"
         tools:targetApi="31">
 
         <activity
@@ -24,9 +24,27 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ManualActivity"
+            android:label="Manual Entry" />
+
+        <activity
+            android:name=".MapActivity"
+            android:label="Map" />
+
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.haojie_huang_myruns1"
+            android:authorities="com.example.haojie_huang_myruns2"
             android:exported="false"
             android:grantUriPermissions="true">
 
