--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.haojie_huang_myruns2">
+    package="com.example.haojie_huang_myruns3">
 
     <application
         android:allowBackup="false"
@@ -11,40 +11,38 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Haojie_Huang_MyRuns2"
+        android:theme="@style/Theme.Haojie_Huang_MyRuns3"
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
-            android:name=".ManualActivity"
-            android:label="Manual Entry" />
+            android:name=".activity.ManualActivity" />
 
         <activity
-            android:name=".MapActivity"
+            android:name=".activity.MapActivity"
             android:label="Map" />
 
         <activity
-            android:name=".ProfileActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+            android:name=".activity.ProfileActivity" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity
+            android:name=".activity.RotationActivity" />
+
+        <activity
+            android:name=".activity.InformationActivity"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.haojie_huang_myruns2"
+            android:authorities="com.example.haojie_huang_myruns3"
             android:exported="false"
             android:grantUriPermissions="true">
 
@@ -52,8 +50,8 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths">
             </meta-data>
-
         </provider>
 
     </application>
+
 </manifest>
