--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.haojie_huang_myruns3">
+    package="com.example.haojie_huang_myruns4">
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="false"
@@ -11,7 +17,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Haojie_Huang_MyRuns3"
+        android:theme="@style/Theme.Haojie_Huang_MyRuns4"
         tools:targetApi="31">
 
         <activity
@@ -28,7 +34,7 @@
 
         <activity
             android:name=".activity.MapActivity"
-            android:label="Map" />
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
 
         <activity
             android:name=".activity.ProfileActivity" />
@@ -37,12 +43,19 @@
             android:name=".activity.RotationActivity" />
 
         <activity
-            android:name=".activity.InformationActivity"
+            android:name=".activity.ManualInformationActivity"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
+
+
+        <service android:name=".TrackService"/>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_KEY" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.haojie_huang_myruns3"
+            android:authorities="com.example.haojie_huang_myruns4"
             android:exported="false"
             android:grantUriPermissions="true">
 
@@ -50,6 +63,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths">
             </meta-data>
+
         </provider>
 
     </application>
