--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.haojie_huang_myruns4">
+    package="com.example.haojie_huang_myruns5">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Haojie_Huang_MyRuns4"
+        android:theme="@style/Theme.Haojie_Huang_MyRuns5"
         tools:targetApi="31">
 
         <activity
@@ -51,11 +51,11 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_KEY" />
+            android:value="Your_key" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.haojie_huang_myruns4"
+            android:authorities="com.example.haojie_huang_myruns5"
             android:exported="false"
             android:grantUriPermissions="true">
 
